syntax = "proto3";
package grpc;
option java_package = "com.alibaba.benchmark.grpc.service";
option java_outer_classname = "EchoServiceProto";
option java_multiple_files = true;

//服务端接口类
//todo
service Greeter {
  //simple RPC
  rpc echoComplexDO (ComplexDO) returns (ComplexDO) {}
  //server-side streaming
  rpc echoComplexDOByServerSideStream( ComplexDO) returns (stream ComplexDO) {}
  //client-side streaming
   rpc echoComplexDOByClientSideStream(stream ComplexDO) returns ( ComplexDO) {}
   //bidirectional streaming
   rpc echoComplexDOByBidirectionalStream(stream ComplexDO) returns (stream ComplexDO) {}
}


message ComplexDO {
  int32 pint = 1;
  int64 plong = 2;
  float pfloat = 3;
  repeated int64 longArray = 4;
  repeated string stringArray = 5;
  map<string, BaseDO> baseDOMap = 6;
  map<string, string> stringMap = 7;
  repeated BaseDO BaseDOArray = 8;
  BaseDO pBaseDO = 9;
  string ip = 10;
}

message BaseDO {
  int64 id = 1;
  string name = 2;
  map<string, BaseDO> baseDOMap = 3;
}